peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Type__c</fullName>
    <label>Equipment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Asset_Equipment_Code</valueSetName>
    </valueSet>
</CustomField>