peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Estimated_Resale_Vaue__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Resale_Vaue__c</fullName>
    <label>Estimated Resale Vaue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>