peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/External_Condition__c.field-meta.xml
<CustomField>
    <fullName>External_Condition__c</fullName>
    <label>External Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Good</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Fair</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Poor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>