peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/File_Upload__c.field-meta.xml
<CustomField>
    <fullName>File_Upload__c</fullName>
    <label>File Upload</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proceeds</fullName>
            </value>
            <value>
                <fullName>Condition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>