peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Financed__c.field-meta.xml
<CustomField>
    <fullName>Financed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Financed</label>
    <type>Checkbox</type>
</CustomField>