peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Gross_Proceeds__c.field-meta.xml
<CustomField>
    <fullName>Gross_Proceeds__c</fullName>
    <label>Gross Proceeds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>