peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Hard_Drive_Serial_Removed__c.field-meta.xml
<CustomField>
    <fullName>Hard_Drive_Serial_Removed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hard Drive Serial # Removed</label>
    <length>80</length>
    <type>Text</type>
</CustomField>