peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Impound_Recovery_Fees__c.field-meta.xml
<CustomField>
    <fullName>Impound_Recovery_Fees__c</fullName>
    <label>Impound &amp; Recovery Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>