peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Insured_Amount__c.field-meta.xml
<CustomField>
    <fullName>Insured_Amount__c</fullName>
    <label>Insured Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>