peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Integration_Status__c</fullName>
    <label>Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Synced</fullName>
                <default>true</default>
                <label>Not Synced</label>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Re-sync</fullName>
            </value>
            <value>
                <fullName>Synced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>