peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Internal_Condition__c.field-meta.xml
<CustomField>
    <fullName>Internal_Condition__c</fullName>
    <label>Internal Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Passes Copy</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Powers Up</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Does Not Power</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>