peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Late_Charge_State_Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>Late_Charge_State_Tax_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Late Charge State Tax Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>