peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/License_Number__c.field-meta.xml
<CustomField>
    <fullName>License_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>License Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>