peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Lien_Date__c.field-meta.xml
<CustomField>
    <fullName>Lien_Date__c</fullName>
    <formula>CASE( TEXT(Asset_State__c) , 
&apos;ME&apos;, &apos;4/01&apos;, 
&apos;VT&apos;, &apos;4/01&apos;, 
&apos;DC&apos;, &apos;7/01&apos;, 
&apos;NV&apos;, &apos;7/01&apos;, 
&apos;WV&apos;, &apos;7/01&apos;, 
&apos;AL&apos;, &apos;10/01&apos;,
&apos;CT&apos;, &apos;10/01&apos;,&apos;1/01&apos; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lien Date</label>
    <type>Text</type>
</CustomField>