peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Location.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Contract Assets</relationshipLabel>
    <relationshipName>Contract_Asset_Location</relationshipName>
    <type>Lookup</type>
</CustomField>