peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/M_D_Value__c.field-meta.xml
<CustomField>
    <fullName>M_D_Value__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>M &amp; D Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>