peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Manufacturer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>