peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Manufacturer_Reset__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Reset__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manufacturer Reset</label>
    <type>Checkbox</type>
</CustomField>