peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Missing_Title_Packet_Documents__c.field-meta.xml
<CustomField>
    <fullName>Missing_Title_Packet_Documents__c</fullName>
    <label>Missing Title Packet Documents</label>
    <summaryFilterItems>
        <field>DocumentStatus__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Accepted</value>
    </summaryFilterItems>
    <summaryForeignKey>DocumentStatus__c.Contract_Asset__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>