peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Model_Number__c.field-meta.xml
<CustomField>
    <fullName>Model_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Model Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>