peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Net_Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>Net_Sale_Price__c</fullName>
    <label>Net Sale Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>