peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/NOD_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>NOD_Expiration_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NOD Expiration Date</label>
    <type>Date</type>
</CustomField>