peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/NOD_Sent__c.field-meta.xml
<CustomField>
    <fullName>NOD_Sent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NOD Sent</label>
    <type>Date</type>
</CustomField>