peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/NOS_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>NOS_Expiration_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NOS Expiration Date</label>
    <type>Date</type>
</CustomField>