peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/NOS_Sent__c.field-meta.xml
<CustomField>
    <fullName>NOS_Sent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NOS Sent</label>
    <type>Date</type>
</CustomField>