peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Original_Cost__c.field-meta.xml
<CustomField>
    <fullName>Original_Cost__c</fullName>
    <label>Original Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>