peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Part_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Part Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>