peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Present_Value_Residual__c.field-meta.xml
<CustomField>
    <fullName>Present_Value_Residual__c</fullName>
    <label>Present Value Residual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>