peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Proceed_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Proceed_Received_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Proceed Received Date</label>
    <type>Date</type>
</CustomField>