peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Proceeds_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Proceeds_Received_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Proceeds Received Date</label>
    <type>Date</type>
</CustomField>