peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Processor_POA_Received__c.field-meta.xml
<CustomField>
    <fullName>Processor_POA_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processor POA Received</label>
    <type>Checkbox</type>
</CustomField>