peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Property_Tax_Status__c.field-meta.xml
<CustomField>
    <fullName>Property_Tax_Status__c</fullName>
    <label>Property Tax Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>