peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Purchase_Option__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Option__c</fullName>
    <label>Purchase Option</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>FMV</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>10% Purchase Option</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>1.00 Out</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>Put</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>Assigned Residual</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>Customer Owned  (EFA)</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>FMV - Capped</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>$101 Purchase Option</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Fixed Purchase Option</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>FMV - Used Equipment</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>FMV No Renewal</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>PUT No Renewal</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>Assign Resid No Renewal</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>FMV Used No Renewal</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>Guaranteed Residual</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>Rental - No Purchase Option</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>Call Wells Fargo for Quote</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>