peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/RA_User__c.field-meta.xml
<CustomField>
    <fullName>RA_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RA User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contract_Assets1</relationshipName>
    <type>Lookup</type>
</CustomField>