peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Recovery_Agent__c.field-meta.xml
<CustomField>
    <fullName>Recovery_Agent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Recovery Agent</label>
    <length>80</length>
    <type>Text</type>
</CustomField>