peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Remarketing_Agent__c.field-meta.xml
<CustomField>
    <fullName>Remarketing_Agent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remarketing Agent</label>
    <length>80</length>
    <type>Text</type>
</CustomField>