peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Repairs__c.field-meta.xml
<CustomField>
    <fullName>Repairs__c</fullName>
    <label>Repairs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>