peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Repo_Agent__c.field-meta.xml
<CustomField>
    <fullName>Repo_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Repo Agent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contract Assets</relationshipLabel>
    <relationshipName>Contract_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>