peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Repo_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Repo_Ordered__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Repo Ordered</label>
    <type>Date</type>
</CustomField>