peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Reposession__c.field-meta.xml
<CustomField>
    <fullName>Reposession__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reposession</label>
    <type>Checkbox</type>
</CustomField>