peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Reset_back_to_Mfg_Settings__c.field-meta.xml
<CustomField>
    <fullName>Reset_back_to_Mfg_Settings__c</fullName>
    <label>Reset back to Mfg Settings</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>