peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Residual_Insurance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Residual_Insurance_Amount__c</fullName>
    <label>Residual Insurance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>