peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Residual_Writedown__c.field-meta.xml
<CustomField>
    <fullName>Residual_Writedown__c</fullName>
    <label>Residual Writedown</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>