peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Responsibility_Code__c.field-meta.xml
<CustomField>
    <fullName>Responsibility_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Responsibility Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>