peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Return_Address__c.field-meta.xml
<CustomField>
    <fullName>Return_Address__c</fullName>
    <formula>IF( ISBLANK(Location__c), &apos;&apos;, 
    IF(ISBLANK(Location__r.Address_1__c), &apos;&apos;, Location__r.Address_1__c &amp; BR()) &amp;
    IF(ISBLANK(Location__r.Address_2__c), &apos;&apos;, Location__r.Address_2__c &amp; BR()) &amp;
    IF(ISBLANK(Location__r.City__c) &amp;&amp; ISBLANK(Location__r.State__c) &amp;&amp; ISBLANK(Location__r.Zip__c), &apos;&apos;, 
        IF(ISBLANK(Location__r.City__c), &apos;&apos;, Location__r.City__c &amp; &apos;, &apos;) &amp;
        IF(ISBLANK(Location__r.State__c), &apos;&apos;, Location__r.State__c &amp; &apos;, &apos;) &amp;
        IF(ISBLANK(Location__r.Zip__c), &apos;&apos;, Location__r.Zip__c) &amp; BR()
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Return Address</label>
    <type>Text</type>
</CustomField>