peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Return_Auth_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>Return_Auth_Create_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Return Auth Create Date</label>
    <type>Date</type>
</CustomField>