peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Return_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Return_Authorization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Return Authorization</label>
    <type>Checkbox</type>
</CustomField>