peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Sale_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Sale_Invoice_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sale Invoice Date</label>
    <type>Date</type>
</CustomField>