peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Serial Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>