peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Sold__c.field-meta.xml
<CustomField>
    <fullName>Sold__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Equipment Sold Date</label>
    <type>Date</type>
</CustomField>