peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/SP_Mfg_Make__c.field-meta.xml
<CustomField>
    <fullName>SP_Mfg_Make__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SP Mfg/Make</label>
    <length>80</length>
    <type>Text</type>
</CustomField>