peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/SP_Partner_Location__c.field-meta.xml
<CustomField>
    <fullName>SP_Partner_Location__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SP Partner Location</label>
    <length>80</length>
    <type>Text</type>
</CustomField>