peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/State_Tax_Percent__c.field-meta.xml
<CustomField>
    <fullName>State_Tax_Percent__c</fullName>
    <label>State Tax Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>