peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Status2__c.field-meta.xml
<CustomField>
    <fullName>Status2__c</fullName>
    <label>Asset Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accessory</fullName>
            </value>
            <value>
                <fullName>Buyout to Keep</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
            <value>
                <fullName>Disposed</fullName>
            </value>
            <value>
                <fullName>Disposed - Customer</fullName>
            </value>
            <value>
                <fullName>DLR Repurchase</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Equipment Received</fullName>
            </value>
            <value>
                <fullName>In Transit</fullName>
            </value>
            <value>
                <fullName>Non-Serialized Asset</fullName>
            </value>
            <value>
                <fullName>Non-Xerox Owned</fullName>
            </value>
            <value>
                <fullName>On Contract</fullName>
            </value>
            <value>
                <fullName>Pending Return</fullName>
            </value>
            <value>
                <fullName>Proceeds Received</fullName>
            </value>
            <value>
                <fullName>Recycled</fullName>
            </value>
            <value>
                <fullName>Repossession Requested</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
                <isActive>false</isActive>
                <label>Received</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>