peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>DP-905</description>
    <formula>IF(ISBLANK(Asset_Disposed_Date__c), &quot;Active&quot;, &quot;Disposed&quot;)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>