peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Status Date</label>
    <type>Date</type>
</CustomField>