peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Tax_exempt_certif__c.field-meta.xml
<CustomField>
    <fullName>Tax_exempt_certif__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax exempt certif</label>
    <type>Checkbox</type>
</CustomField>