peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Title_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Title_Expiration__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Title Expiration</label>
    <type>Date</type>
</CustomField>