peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Title_Processor__c.field-meta.xml
<CustomField>
    <fullName>Title_Processor__c</fullName>
    <description>This should be a lookup but will depend on what system and who is in charge of this data</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Title Processor</label>
    <length>80</length>
    <type>Text</type>
</CustomField>