peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Title_Received__c.field-meta.xml
<CustomField>
    <fullName>Title_Received__c</fullName>
    <label>Title Received</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No</label>
            </value>
            <value>
                <fullName>LF</fullName>
                <label>Lien Filed</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Customer Held</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>